@@ -244,8 +244,8 @@ class ArloCfg(object):
         return self._kw.get("no_unicode_squash", True)
 
     @property
-    def use_mqtt(self):
-        return self._kw.get("backend", "mqtt") == "mqtt"
+    def event_backend(self):
+        return self._kw.get("backend", "auto")
 
     @property
     def default_ciphers(self):
