@@ -2,6 +2,7 @@
   Allow ciphers to be set to SSL defaults.
   Try to parse all email parts looking for the authentication code.
   Open mailbox read only, stops the wrong emails getting marked as read.
+  Better detection of backend.
 0.8.0b1: Fix yahoo imap support.
   Fix creation of ArloSnapshot objects.
 
